name:                evilgrid
version:             0.1.0.0
license-file:        LICENSE
author:              Aycan iRiCAN
maintainer:          iricanaycan@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is: site.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base >=4.6 && <4.7
    , hakyll >= 4.5.0.2
  default-language:    Haskell2010
